# nnbfl

./: .gitignore  Cargo.toml  LICENSE  README.md  bflyt_bflan_bffnt.900.hexpat  sarc.hexpat  test.json
.github/workflows/: release.yml
nnbfl/: Cargo.toml
nnbfl-preview/: Cargo.toml
nnbfl-preview/assets/: icon.rgba
nnbfl-preview/src/: anim_state.rs  archive_browser.rs  bflyt_view.rs  camera.rs  main.rs  pane_tree.rs  traits.rs  ui.rs
nnbfl-preview/src/renderer/: mod.rs  quad.rs  selection.rs  texture.rs  textured_quad.rs
nnbfl-preview/src/shaders/: grid.wgsl  quad.wgsl  selection.wgsl  textured_quad.wgsl
nnbfl/src/: lib.rs  main.rs
nnbfl/src/bflan/: anim_info.rs  anim_tag.rs  constants.rs  curves.rs  file.rs  targets.rs
nnbfl/src/bflyt/: file.rs  flags.rs  list.rs  mod.rs  pane.rs
nnbfl/src/core/: cursor.rs  error.rs  mod.rs  tests.rs  writer.rs
nnbfl/src/sarc/: file.rs
nnbfl/src/ui2d/: mod.rs  systemdata.rs  types.rs  userdata.rs
src/: bflan.rs  bflan_writer.rs  cursor.rs  main.rs
src/bflan/: anim_info.rs  anim_tag.rs  constants.rs  curves.rs  file.rs  mod.rs  targets.rs
src/bflyt/: constants.rs  file.rs  flags.rs  list.rs  mod.rs  pane.rs
src/core/: cursor.rs  error.rs  mod.rs  section.rs  tests.rs  writer.rs
src/ui2d/: systemdata.rs  types.rs  userdata.rs
