[package]
name = "nnbfl-preview"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nnbfl-preview"
path = "src/main.rs"

[dependencies]
nnbfl = { path = "../nnbfl" }

wgpu = "29"
winit = "0.30"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
rfd = "0.17"
tomolib = "1.6"

egui-chinese-font = { git = "https://github.com/szjerrywang/egui-chinese-font", branch = "egui-0.34" }
szs = "0.3.7"
